@@ -10,6 +10,7 @@
 	  page allowing the movecom/copytorrent/autoadd boxes to be enabled.
 	* Fix enabling plugins.
 	* Implement installing plugins.
+	* Update some icons
 
 ==== GtkUI ====
 	* Attempt to register as the default magnet uri handler in GNOME on startup
